test/syntax/30-mulop-err.c
// ======================================================================

/* mulop -> MULTIPLY
          | DIVIDE
          | PERCENT */

// ======================================================================

void main(void)
{
  int i;

  i = 1 * 2 / 3 %% 4;	// error: not mulop
}

// ======================================================================
